fix error messanges and refactoring create method (async await)

--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app/index.js"
+    "start": "node  app/index.js"
   },
   "author": "Strakhov Denys",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^10.0.0",
-    "lodash": "^4.17.21"
+    "uuid": "^8.3.2"
   }
 }
